--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> This is my first web page powered by Github Pager </h1>
+<h1> This is my first web page powered by Github Pages </h1>
 Thanks Github!
 </html>
